--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -17,7 +17,7 @@ jobs:
       run: yarn
 
     - name: Format
-      run: yarn
+      run: yarn format
 
     - name: Lint
-      run: yarn
+      run: yarn lint
