--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -1,25 +1,28 @@
 backend:
   name: github
   repo: wslyvh/cms
-  branch: temp-cms
+  branch: main
 
 publish_mode: editorial_workflow
-media_folder: static/assets/images/uploads
-public_folder: /assets/images/uploads
+media_folder: static/assets/uploads/images
+public_folder: /assets/uploads/images
+
+i18n:
+  structure: multiple_folders
+  locales: [en, es]
+  default_locale: en
 
 collections:
-  - name: pages
-    label: Pages
-    label_singular: Page
-    folder: src/content/pages
+  - name: 'pages'
+    label: 'Pages'
+    label_singular: 'Page'
+    folder: 'src/content/pages'
     create: true
+    i18n: true
     nested:
-      depth: 3
+      depth: 3 
     fields:
-      - { name: title, label: Title, widget: string }
-      - { name: label, label: Label, widget: string }
-      - { name: description, label: Description, widget: text }
-      - { name: body, label: Body, widget: markdown }
-      - { name: keywords, label: Keywords, widget: list }
-      - { name: visible, label: Visible, widget: boolean, default: false }
-    meta: { path: { widget: string, label: 'Path', index_file: 'index' } }
+      - { name: 'title', label: 'Title', widget: 'string', i18n: true }
+      - { name: 'body', label: 'Body', widget: 'markdown', i18n: true }
+      - { name: 'order', label: 'Order', widget: 'number', i18n: 'duplicate', required: false, value_type: 'int', min: 1, max: 1000, step: 1 }
+    meta: { path: { name: 'path', label: 'Path', widget: 'string', i18n: false, index_file: 'index', hint: 'Path can be a sub-folder (e.g. tickets/builder)' } }
